feat:add scss variables

--- a/scss/main.css
+++ b/scss/main.css
@@ -1,5 +1,1 @@
-.title {
-  background-color: aquamarine;
-  height: 70px;
-  width: 500px;
-}/*# sourceMappingURL=main.css.map */
+/*# sourceMappingURL=main.css.map */
