--- a/src/output.css
+++ b/src/output.css
@@ -246,6 +246,9 @@
   .h-\[280px\] {
     height: 280px;
   }
+  .h-\[315px\] {
+    height: 315px;
+  }
   .h-\[420px\] {
     height: 420px;
   }
@@ -266,6 +269,9 @@
   }
   .max-h-\[460px\] {
     max-height: 460px;
+  }
+  .min-h-\[315px\] {
+    min-height: 315px;
   }
   .w-\[24px\] {
     width: 24px;
@@ -341,6 +347,9 @@
   }
   .items-center {
     align-items: center;
+  }
+  .items-stretch {
+    align-items: stretch;
   }
   .justify-between {
     justify-content: space-between;
