--- a/scss/main.css
+++ b/scss/main.css
@@ -52,8 +52,27 @@ body {
 .lg-btn:hover {
   background-color: #3F5D45;
   color: #EAF0ED;
+  transition: all 0.5s ease;
 }
 .lg-btn:active {
   background-color: #3F5D45;
   color: #EAF0ED;
+  transition: all 0.5s ease;
+}
+
+.accent-btn {
+  background-color: #FFE180;
+  color: #3F5D45;
+  cursor: pointer;
+}
+.accent-btn:hover {
+  box-shadow: 0 5px 18px rgba(0, 0, 0, 0.8);
+  transition: all 0.3s ease;
+}
+
+.key-in {
+  background-color: #EAF0ED;
+}
+.key-in:hover {
+  border: 3px solid #FFE180;
 }/*# sourceMappingURL=main.css.map */
