--- a/scss/main.scss
+++ b/scss/main.scss
@@ -52,10 +52,31 @@ body{
     &:hover{
         background-color: $color-primary;
         color: $color-secondary;
+        transition: all 0.5s ease;
     }
     &:active{
         background-color: $color-primary;
         color: $color-secondary;
+        transition: all 0.5s ease;
+    }
+}
+
+
+.accent-btn{
+    background-color: $color-accent;
+    color: $color-primary;
+    cursor: pointer;
+    &:hover{
+        box-shadow: 0 5px 18px rgba($color: black, $alpha: 0.8);
+        transition: all 0.3s ease;
+
+    }
+}
+
+.key-in{
+    background-color: $color-secondary;
+    &:hover{
+        border: 3px solid $color-accent;
     }
 }
 
