--- a/src/output.css
+++ b/src/output.css
@@ -15,6 +15,8 @@
     --font-weight-light: 300;
     --font-weight-semibold: 600;
     --tracking-widest: 0.1em;
+    --default-transition-duration: 150ms;
+    --default-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     --default-font-family: var(--font-sans);
     --default-mono-font-family: var(--font-mono);
   }
@@ -174,6 +176,9 @@
   .relative {
     position: relative;
   }
+  .top-4 {
+    top: calc(var(--spacing) * 4);
+  }
   .top-\[19px\] {
     top: 19px;
   }
@@ -240,6 +245,21 @@
   .h-10 {
     height: calc(var(--spacing) * 10);
   }
+  .h-\[24px\] {
+    height: 24px;
+  }
+  .h-\[40px\] {
+    height: 40px;
+  }
+  .h-\[56px\] {
+    height: 56px;
+  }
+  .h-\[116px\] {
+    height: 116px;
+  }
+  .h-\[122px\] {
+    height: 122px;
+  }
   .h-\[256px\] {
     height: 256px;
   }
@@ -257,6 +277,9 @@
   }
   .h-full {
     height: 100%;
+  }
+  .max-h-\[186px\] {
+    max-height: 186px;
   }
   .max-h-\[307\.15px\] {
     max-height: 307.15px;
@@ -291,11 +314,32 @@
   .w-\[33\.4\%\] {
     width: 33.4%;
   }
+  .w-\[40px\] {
+    width: 40px;
+  }
+  .w-\[64px\] {
+    width: 64px;
+  }
   .w-\[200px\] {
     width: 200px;
   }
   .w-\[215px\] {
     width: 215px;
+  }
+  .w-\[272px\] {
+    width: 272px;
+  }
+  .w-\[276px\] {
+    width: 276px;
+  }
+  .w-\[380px\] {
+    width: 380px;
+  }
+  .w-\[780px\] {
+    width: 780px;
+  }
+  .w-\[1024px\] {
+    width: 1024px;
   }
   .w-full {
     width: 100%;
@@ -357,6 +401,9 @@
   .justify-center {
     justify-content: center;
   }
+  .justify-end {
+    justify-content: flex-end;
+  }
   .gap-\[79px\] {
     gap: 79px;
   }
@@ -371,11 +418,17 @@
     border-block-style: var(--tw-border-style);
     border-block-width: 1px;
   }
+  .bg-\[\#3F5D45\] {
+    background-color: #3F5D45;
+  }
   .bg-\[\#3F5D45\]\/80 {
     background-color: color-mix(in oklab, #3F5D45 80%, transparent);
   }
   .bg-\[\#EAF0ED\] {
     background-color: #EAF0ED;
+  }
+  .bg-\[\#FFE180\] {
+    background-color: #FFE180;
   }
   .bg-cover {
     background-size: cover;
@@ -388,6 +441,9 @@
   }
   .px-\[33px\] {
     padding-inline: 33px;
+  }
+  .px-\[42px\] {
+    padding-inline: 42px;
   }
   .text-center {
     text-align: center;
@@ -414,6 +470,9 @@
   .text-\[\#8DA291\] {
     color: #8DA291;
   }
+  .text-\[\#EAF0ED\] {
+    color: #EAF0ED;
+  }
   .text-white {
     color: var(--color-white);
   }
@@ -432,6 +491,11 @@
   .backdrop-filter {
     -webkit-backdrop-filter: var(--tw-backdrop-blur,) var(--tw-backdrop-brightness,) var(--tw-backdrop-contrast,) var(--tw-backdrop-grayscale,) var(--tw-backdrop-hue-rotate,) var(--tw-backdrop-invert,) var(--tw-backdrop-opacity,) var(--tw-backdrop-saturate,) var(--tw-backdrop-sepia,);
     backdrop-filter: var(--tw-backdrop-blur,) var(--tw-backdrop-brightness,) var(--tw-backdrop-contrast,) var(--tw-backdrop-grayscale,) var(--tw-backdrop-hue-rotate,) var(--tw-backdrop-invert,) var(--tw-backdrop-opacity,) var(--tw-backdrop-saturate,) var(--tw-backdrop-sepia,);
+  }
+  .transition {
+    transition-property: color, background-color, border-color, outline-color, text-decoration-color, fill, stroke, --tw-gradient-from, --tw-gradient-via, --tw-gradient-to, opacity, box-shadow, transform, translate, scale, rotate, filter, -webkit-backdrop-filter, backdrop-filter, display, content-visibility, overlay, pointer-events;
+    transition-timing-function: var(--tw-ease, var(--default-transition-timing-function));
+    transition-duration: var(--tw-duration, var(--default-transition-duration));
   }
   .\[text-orientation\:upright\] {
     text-orientation: upright;
@@ -496,6 +560,21 @@
       @media (hover: hover) {
         color: #3F5D45;
       }
+    }
+  }
+  .max-\[768px\]\:flex {
+    @media (width < 768px) {
+      display: flex;
+    }
+  }
+  .max-\[768px\]\:h-\[186px\] {
+    @media (width < 768px) {
+      height: 186px;
+    }
+  }
+  .max-\[768px\]\:flex-col {
+    @media (width < 768px) {
+      flex-direction: column;
     }
   }
   .max-md\:text-\[20px\] {
