--- a/scss/main.css
+++ b/scss/main.css
@@ -75,4 +75,8 @@ body {
 }
 .key-in:hover {
   border: 3px solid #FFE180;
+}
+
+.information-font {
+  font-family: "Helvetica Neue";
 }/*# sourceMappingURL=main.css.map */
