--- a/src/output.css
+++ b/src/output.css
@@ -7,15 +7,24 @@
       "Segoe UI Emoji", "Segoe UI Symbol", "Noto Color Emoji";
     --font-mono: ui-monospace, SFMono-Regular, Menlo, Monaco, Consolas, "Liberation Mono",
       "Courier New", monospace;
+    --color-amber-50: oklch(98.7% 0.022 95.277);
+    --color-amber-100: oklch(96.2% 0.059 95.617);
     --color-amber-300: oklch(87.9% 0.169 91.605);
     --color-amber-800: oklch(47.3% 0.137 46.201);
+    --color-white: #fff;
     --spacing: 0.25rem;
+    --text-2xl: 1.5rem;
+    --text-2xl--line-height: calc(2 / 1.5);
     --text-3xl: 1.875rem;
     --text-3xl--line-height: calc(2.25 / 1.875);
     --text-5xl: 3rem;
     --text-5xl--line-height: 1;
+    --font-weight-light: 300;
     --font-weight-semibold: 600;
     --font-weight-bold: 700;
+    --tracking-widest: 0.1em;
+    --default-transition-duration: 150ms;
+    --default-transition-timing-function: cubic-bezier(0.4, 0, 0.2, 1);
     --default-font-family: var(--font-sans);
     --default-mono-font-family: var(--font-mono);
   }
@@ -169,14 +178,68 @@
   }
 }
 @layer utilities {
+  .absolute {
+    position: absolute;
+  }
+  .relative {
+    position: relative;
+  }
+  .top-4 {
+    top: calc(var(--spacing) * 4);
+  }
+  .top-\[19px\] {
+    top: 19px;
+  }
+  .right-5 {
+    right: calc(var(--spacing) * 5);
+  }
+  .left-5 {
+    left: calc(var(--spacing) * 5);
+  }
+  .z-0 {
+    z-index: 0;
+  }
+  .z-1 {
+    z-index: 1;
+  }
+  .z-10 {
+    z-index: 10;
+  }
+  .mx-auto {
+    margin-inline: auto;
+  }
+  .-mt-\[20px\] {
+    margin-top: calc(20px * -1);
+  }
   .mt-\[30px\] {
     margin-top: 30px;
+  }
+  .mt-\[80px\] {
+    margin-top: 80px;
+  }
+  .mt-\[95px\] {
+    margin-top: 95px;
+  }
+  .mt-\[105px\] {
+    margin-top: 105px;
   }
   .mr-auto {
     margin-right: auto;
   }
+  .mb-\[23px\] {
+    margin-bottom: 23px;
+  }
   .mb-\[30px\] {
     margin-bottom: 30px;
+  }
+  .mb-\[60px\] {
+    margin-bottom: 60px;
+  }
+  .mb-\[80px\] {
+    margin-bottom: 80px;
+  }
+  .mb-\[116px\] {
+    margin-bottom: 116px;
   }
   .ml-auto {
     margin-left: auto;
@@ -196,8 +259,113 @@
   .h-10 {
     height: calc(var(--spacing) * 10);
   }
+  .h-\[24px\] {
+    height: 24px;
+  }
+  .h-\[27px\] {
+    height: 27px;
+  }
+  .h-\[32px\] {
+    height: 32px;
+  }
+  .h-\[40px\] {
+    height: 40px;
+  }
+  .h-\[56px\] {
+    height: 56px;
+  }
+  .h-\[116px\] {
+    height: 116px;
+  }
+  .h-\[122px\] {
+    height: 122px;
+  }
+  .h-\[218px\] {
+    height: 218px;
+  }
+  .h-\[219px\] {
+    height: 219px;
+  }
+  .h-\[256px\] {
+    height: 256px;
+  }
+  .h-\[280\.5px\] {
+    height: 280.5px;
+  }
+  .h-\[280px\] {
+    height: 280px;
+  }
+  .h-\[281px\] {
+    height: 281px;
+  }
+  .h-\[315px\] {
+    height: 315px;
+  }
+  .h-\[341px\] {
+    height: 341px;
+  }
+  .h-\[420px\] {
+    height: 420px;
+  }
+  .h-\[496px\] {
+    height: 496px;
+  }
+  .h-full {
+    height: 100%;
+  }
+  .max-h-\[186px\] {
+    max-height: 186px;
+  }
+  .max-h-\[307\.15px\] {
+    max-height: 307.15px;
+  }
+  .max-h-\[315px\] {
+    max-height: 315px;
+  }
+  .max-h-\[328px\] {
+    max-height: 328px;
+  }
+  .max-h-\[460px\] {
+    max-height: 460px;
+  }
+  .min-h-\[315px\] {
+    min-height: 315px;
+  }
   .w-\[24px\] {
     width: 24px;
+  }
+  .w-\[30\%\] {
+    width: 30%;
+  }
+  .w-\[32\%\] {
+    width: 32%;
+  }
+  .w-\[32px\] {
+    width: 32px;
+  }
+  .w-\[33\%\] {
+    width: 33%;
+  }
+  .w-\[33\.3\%\] {
+    width: 33.3%;
+  }
+  .w-\[33\.4\%\] {
+    width: 33.4%;
+  }
+  .w-\[40px\] {
+    width: 40px;
+  }
+  .w-\[60px\] {
+    width: 60px;
+  }
+  .w-\[64px\] {
+    width: 64px;
+  }
+  .w-\[72px\] {
+    width: 72px;
+  }
+  .w-\[171px\] {
+    width: 171px;
   }
   .w-\[200px\] {
     width: 200px;
@@ -205,14 +373,50 @@
   .w-\[215px\] {
     width: 215px;
   }
-  .w-\[300px\] {
-    width: 300px;
+  .w-\[258px\] {
+    width: 258px;
+  }
+  .w-\[272px\] {
+    width: 272px;
+  }
+  .w-\[276px\] {
+    width: 276px;
+  }
+  .w-\[380px\] {
+    width: 380px;
+  }
+  .w-\[780px\] {
+    width: 780px;
+  }
+  .w-\[1024px\] {
+    width: 1024px;
   }
   .w-full {
     width: 100%;
   }
+  .max-w-\[89px\] {
+    max-width: 89px;
+  }
+  .max-w-\[256px\] {
+    max-width: 256px;
+  }
+  .max-w-\[259\.67px\] {
+    max-width: 259.67px;
+  }
   .max-w-\[300px\] {
     max-width: 300px;
+  }
+  .max-w-\[425px\] {
+    max-width: 425px;
+  }
+  .max-w-\[460px\] {
+    max-width: 460px;
+  }
+  .max-w-\[780px\] {
+    max-width: 780px;
+  }
+  .max-w-\[781px\] {
+    max-width: 781px;
   }
   .max-w-\[940px\] {
     max-width: 940px;
@@ -220,46 +424,116 @@
   .max-w-\[1024px\] {
     max-width: 1024px;
   }
+  .min-w-\[315px\] {
+    min-width: 315px;
+  }
   .border-collapse {
     border-collapse: collapse;
   }
   .transform {
     transform: var(--tw-rotate-x,) var(--tw-rotate-y,) var(--tw-rotate-z,) var(--tw-skew-x,) var(--tw-skew-y,);
   }
+  .cursor-pointer {
+    cursor: pointer;
+  }
   .resize {
     resize: both;
+  }
+  .flex-col {
+    flex-direction: column;
+  }
+  .flex-row-reverse {
+    flex-direction: row-reverse;
   }
   .items-center {
     align-items: center;
   }
+  .items-end {
+    align-items: flex-end;
+  }
+  .items-stretch {
+    align-items: stretch;
+  }
   .justify-between {
     justify-content: space-between;
   }
+  .justify-center {
+    justify-content: center;
+  }
+  .justify-end {
+    justify-content: flex-end;
+  }
   .gap-\[79px\] {
     gap: 79px;
+  }
+  .overflow-hidden {
+    overflow: hidden;
   }
   .border {
     border-style: var(--tw-border-style);
     border-width: 1px;
   }
-  .p-\[33px\] {
-    padding: 33px;
+  .border-y {
+    border-block-style: var(--tw-border-style);
+    border-block-width: 1px;
+  }
+  .bg-\[\#3F5D45\] {
+    background-color: #3F5D45;
+  }
+  .bg-\[\#3F5D45\]\/80 {
+    background-color: color-mix(in oklab, #3F5D45 80%, transparent);
+  }
+  .bg-\[\#EAF0ED\] {
+    background-color: #EAF0ED;
+  }
+  .bg-\[\#FFE180\] {
+    background-color: #FFE180;
+  }
+  .bg-cover {
+    background-size: cover;
+  }
+  .bg-center {
+    background-position: center;
+  }
+  .object-cover {
+    object-fit: cover;
   }
   .px-\[33px\] {
     padding-inline: 33px;
   }
-  .py-\[33px\] {
-    padding-block: 33px;
+  .px-\[42px\] {
+    padding-inline: 42px;
   }
-  .pr-\[33px\] {
-    padding-right: 33px;
+  .text-center {
+    text-align: center;
+  }
+  .text-2xl {
+    font-size: var(--text-2xl);
+    line-height: var(--tw-leading, var(--text-2xl--line-height));
+  }
+  .font-light {
+    --tw-font-weight: var(--font-weight-light);
+    font-weight: var(--font-weight-light);
   }
   .font-semibold {
     --tw-font-weight: var(--font-weight-semibold);
     font-weight: var(--font-weight-semibold);
   }
+  .tracking-widest {
+    --tw-tracking: var(--tracking-widest);
+    letter-spacing: var(--tracking-widest);
+  }
   .text-\[\#3F5D45\] {
     color: #3F5D45;
+  }
+  .text-\[\#8DA291\] {
+    color: #8DA291;
+  }
+  .text-\[\#EAF0ED\] {
+    color: #EAF0ED;
+  }
+  .text-white {
+    color: var(--color-white);
   }
   .underline {
     text-decoration-line: underline;
@@ -268,6 +542,73 @@
     outline-style: var(--tw-outline-style);
     outline-width: 1px;
   }
+  .backdrop-blur-\[5px\] {
+    --tw-backdrop-blur: blur(5px);
+    -webkit-backdrop-filter: var(--tw-backdrop-blur,) var(--tw-backdrop-brightness,) var(--tw-backdrop-contrast,) var(--tw-backdrop-grayscale,) var(--tw-backdrop-hue-rotate,) var(--tw-backdrop-invert,) var(--tw-backdrop-opacity,) var(--tw-backdrop-saturate,) var(--tw-backdrop-sepia,);
+    backdrop-filter: var(--tw-backdrop-blur,) var(--tw-backdrop-brightness,) var(--tw-backdrop-contrast,) var(--tw-backdrop-grayscale,) var(--tw-backdrop-hue-rotate,) var(--tw-backdrop-invert,) var(--tw-backdrop-opacity,) var(--tw-backdrop-saturate,) var(--tw-backdrop-sepia,);
+  }
+  .backdrop-filter {
+    -webkit-backdrop-filter: var(--tw-backdrop-blur,) var(--tw-backdrop-brightness,) var(--tw-backdrop-contrast,) var(--tw-backdrop-grayscale,) var(--tw-backdrop-hue-rotate,) var(--tw-backdrop-invert,) var(--tw-backdrop-opacity,) var(--tw-backdrop-saturate,) var(--tw-backdrop-sepia,);
+    backdrop-filter: var(--tw-backdrop-blur,) var(--tw-backdrop-brightness,) var(--tw-backdrop-contrast,) var(--tw-backdrop-grayscale,) var(--tw-backdrop-hue-rotate,) var(--tw-backdrop-invert,) var(--tw-backdrop-opacity,) var(--tw-backdrop-saturate,) var(--tw-backdrop-sepia,);
+  }
+  .transition {
+    transition-property: color, background-color, border-color, outline-color, text-decoration-color, fill, stroke, --tw-gradient-from, --tw-gradient-via, --tw-gradient-to, opacity, box-shadow, transform, translate, scale, rotate, filter, -webkit-backdrop-filter, backdrop-filter, display, content-visibility, overlay, pointer-events;
+    transition-timing-function: var(--tw-ease, var(--default-transition-timing-function));
+    transition-duration: var(--tw-duration, var(--default-transition-duration));
+  }
+  .\[text-orientation\:upright\] {
+    text-orientation: upright;
+  }
+  .\[writing-mode\:vertical-rl\] {
+    writing-mode: vertical-rl;
+  }
+  .hover\:scale-100 {
+    &:hover {
+      @media (hover: hover) {
+        --tw-scale-x: 100%;
+        --tw-scale-y: 100%;
+        --tw-scale-z: 100%;
+        scale: var(--tw-scale-x) var(--tw-scale-y);
+      }
+    }
+  }
+  .hover\:scale-150 {
+    &:hover {
+      @media (hover: hover) {
+        --tw-scale-x: 150%;
+        --tw-scale-y: 150%;
+        --tw-scale-z: 150%;
+        scale: var(--tw-scale-x) var(--tw-scale-y);
+      }
+    }
+  }
+  .hover\:scale-200 {
+    &:hover {
+      @media (hover: hover) {
+        --tw-scale-x: 200%;
+        --tw-scale-y: 200%;
+        --tw-scale-z: 200%;
+        scale: var(--tw-scale-x) var(--tw-scale-y);
+      }
+    }
+  }
+  .hover\:scale-500 {
+    &:hover {
+      @media (hover: hover) {
+        --tw-scale-x: 500%;
+        --tw-scale-y: 500%;
+        --tw-scale-z: 500%;
+        scale: var(--tw-scale-x) var(--tw-scale-y);
+      }
+    }
+  }
+  .hover\:scale-3d {
+    &:hover {
+      @media (hover: hover) {
+        scale: var(--tw-scale-x) var(--tw-scale-y) var(--tw-scale-z);
+      }
+    }
+  }
   .hover\:cursor-pointer {
     &:hover {
       @media (hover: hover) {
@@ -275,9 +616,128 @@
       }
     }
   }
-  .md\:block {
-    @media (width >= 48rem) {
+  .hover\:border-b-4 {
+    &:hover {
+      @media (hover: hover) {
+        border-bottom-style: var(--tw-border-style);
+        border-bottom-width: 4px;
+      }
+    }
+  }
+  .hover\:bg-\[\#FFE180\]\/80 {
+    &:hover {
+      @media (hover: hover) {
+        background-color: color-mix(in oklab, #FFE180 80%, transparent);
+      }
+    }
+  }
+  .hover\:fill-amber-50 {
+    &:hover {
+      @media (hover: hover) {
+        fill: var(--color-amber-50);
+      }
+    }
+  }
+  .hover\:fill-amber-100 {
+    &:hover {
+      @media (hover: hover) {
+        fill: var(--color-amber-100);
+      }
+    }
+  }
+  .hover\:font-semibold {
+    &:hover {
+      @media (hover: hover) {
+        --tw-font-weight: var(--font-weight-semibold);
+        font-weight: var(--font-weight-semibold);
+      }
+    }
+  }
+  .hover\:text-\[\#3F5D45\] {
+    &:hover {
+      @media (hover: hover) {
+        color: #3F5D45;
+      }
+    }
+  }
+  .max-\[769px\]\:mb-\[30px\] {
+    @media (width < 769px) {
+      margin-bottom: 30px;
+    }
+  }
+  .max-\[769px\]\:mb-\[40px\] {
+    @media (width < 769px) {
+      margin-bottom: 40px;
+    }
+  }
+  .max-\[769px\]\:block {
+    @media (width < 769px) {
       display: block;
+    }
+  }
+  .max-\[769px\]\:hidden {
+    @media (width < 769px) {
+      display: none;
+    }
+  }
+  .max-\[769px\]\:h-\[186px\] {
+    @media (width < 769px) {
+      height: 186px;
+    }
+  }
+  .max-\[769px\]\:h-full {
+    @media (width < 769px) {
+      height: 100%;
+    }
+  }
+  .max-\[769px\]\:w-\[258px\] {
+    @media (width < 769px) {
+      width: 258px;
+    }
+  }
+  .max-\[769px\]\:w-\[315px\] {
+    @media (width < 769px) {
+      width: 315px;
+    }
+  }
+  .max-\[769px\]\:flex-col {
+    @media (width < 769px) {
+      flex-direction: column;
+    }
+  }
+  .max-\[769px\]\:items-baseline {
+    @media (width < 769px) {
+      align-items: baseline;
+    }
+  }
+  .max-\[769px\]\:justify-baseline {
+    @media (width < 769px) {
+      justify-content: baseline;
+    }
+  }
+  .max-\[768px\]\:flex {
+    @media (width < 768px) {
+      display: flex;
+    }
+  }
+  .max-\[768px\]\:h-\[186px\] {
+    @media (width < 768px) {
+      height: 186px;
+    }
+  }
+  .max-\[768px\]\:flex-col {
+    @media (width < 768px) {
+      flex-direction: column;
+    }
+  }
+  .max-md\:text-\[20px\] {
+    @media (width < 48rem) {
+      font-size: 20px;
+    }
+  }
+  .md\:-mt-\[89px\] {
+    @media (width >= 48rem) {
+      margin-top: calc(89px * -1);
     }
   }
   .md\:flex {
@@ -290,19 +750,9 @@
       display: none;
     }
   }
-  .md\:p-0 {
-    @media (width >= 48rem) {
-      padding: calc(var(--spacing) * 0);
-    }
-  }
   .md\:px-\[42px\] {
     @media (width >= 48rem) {
       padding-inline: 42px;
-    }
-  }
-  .md\:pr-\[42px\] {
-    @media (width >= 48rem) {
-      padding-right: 42px;
     }
   }
 }
@@ -335,10 +785,65 @@
   syntax: "*";
   inherits: false;
 }
+@property --tw-tracking {
+  syntax: "*";
+  inherits: false;
+}
 @property --tw-outline-style {
   syntax: "*";
   inherits: false;
   initial-value: solid;
+}
+@property --tw-backdrop-blur {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-backdrop-brightness {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-backdrop-contrast {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-backdrop-grayscale {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-backdrop-hue-rotate {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-backdrop-invert {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-backdrop-opacity {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-backdrop-saturate {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-backdrop-sepia {
+  syntax: "*";
+  inherits: false;
+}
+@property --tw-scale-x {
+  syntax: "*";
+  inherits: false;
+  initial-value: 1;
+}
+@property --tw-scale-y {
+  syntax: "*";
+  inherits: false;
+  initial-value: 1;
+}
+@property --tw-scale-z {
+  syntax: "*";
+  inherits: false;
+  initial-value: 1;
 }
 @layer properties {
   @supports ((-webkit-hyphens: none) and (not (margin-trim: inline))) or ((-moz-orient: inline) and (not (color:rgb(from red r g b)))) {
@@ -350,7 +855,20 @@
       --tw-skew-y: initial;
       --tw-border-style: solid;
       --tw-font-weight: initial;
+      --tw-tracking: initial;
       --tw-outline-style: solid;
+      --tw-backdrop-blur: initial;
+      --tw-backdrop-brightness: initial;
+      --tw-backdrop-contrast: initial;
+      --tw-backdrop-grayscale: initial;
+      --tw-backdrop-hue-rotate: initial;
+      --tw-backdrop-invert: initial;
+      --tw-backdrop-opacity: initial;
+      --tw-backdrop-saturate: initial;
+      --tw-backdrop-sepia: initial;
+      --tw-scale-x: 1;
+      --tw-scale-y: 1;
+      --tw-scale-z: 1;
     }
   }
 }
