--- a/scss/main.scss
+++ b/scss/main.scss
@@ -84,3 +84,55 @@ body{
     font-family: $font-family-secondary;
 }
 
+.nav-title{
+    background-color: $color-primary;
+    color:$color-secondary;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 65px;
+    font-size: 24px;
+    font-weight: 600;
+}
+
+.nav-btn{
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    background-color: $color-background;
+    color: $color-primary;
+    border: 1px solid $color-secondary;
+    height: 65px;
+    font-size: 24px;
+    font-weight: 600;
+    cursor: pointer;
+    &:hover{
+        background-color:$color-secondary;
+        transition: all 0.5s ease;
+    }
+    &:active{
+        background-color:$color-secondary;
+        transition: all 0.5s ease;
+    }
+}
+
+.page-btn{
+    width: 60px;
+    height: 60px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    cursor: pointer;
+    color:$color-primary;
+    font-size: 20px;
+    border:1px solid $color-secondary;
+    &:hover{
+        background-color: $color-primary;
+        color:$color-secondary;
+    }
+    &:active{
+        background-color: $color-primary;
+        color:$color-secondary;
+    }
+}
+
